# NdkVoice

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ChangeVoice.cpp  ChangeVoice.h  Constant.h  FFmpegPlay.cpp  FFmpegPlay.h  JniCall.cpp  JniCall.h  native-lib.cpp
app/src/main/java/com/ldlywt/ffmpegstudy/: ChangeVoiceActivity.java  MainActivity.java  MainActivity.kt  NativeUtil.java  Player.java  Utils.java
app/src/main/java/com/ldlywt/ffmpegstudy/listener/: MediaErrorListener.java
app/src/main/java/com/ldlywt/ffmpegstudy/utils/: PermissionHelper.java  RawUtils.java
app/src/main/jniLibs/include/inc/: fmod.h  fmod.hpp  fmod_codec.h  fmod_common.h  fmod_dsp.h  fmod_dsp_effects.h  fmod_errors.h  fmod_output.h
app/src/main/res/layout/: activity_change_voice.xml  activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
